# tracing-cloudwatch-repro

./: Cargo.toml
src/: main.rs  telemetry.rs
