[package]
name = "tracing-cloudwatch-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt","macros","fs"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter","registry"] }
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
axum = {version="0.7.4",features = ["ws","macros"]}
tower-http = { version = "0.5", features = ["trace","compression-gzip","cors"] }
tower = "0.4"
thiserror = "1"
serde_json = "1"
mongodb = { version = "2", features = ["bson-chrono-0_4","bson-uuid-1"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3.21"
dashmap = "5"
async-recursion= "1"
uuid = "1"
pbkdf2 = {version = "0.12" , features = ["simple"]}
jsonwebtoken = "8"
once_cell = "1.19"
base64 = "0.21"
config = {version = "0.13",default-features = false, features = ["yaml"]}
secrecy = { version = "0.8", features = ["serde"] }
chrono-tz = "0.8"
reqwest = { version = "0.12", features = ["json"]}
strum = { version = "0.26", features = ["derive"] }
matchit = "0.7.3" # v0.8.0 break the partern match in export need research
sentry = "0.32.2"
sentry-tracing = "0.32.2"
sentry-tower = { version = "0.32.2", features = ["http","axum","axum-matched-path"] }
http = "1"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tracing-cloudwatch = { version = "0.1.5", features = ["rusoto"] }
rusoto_core = "0.48.0"
rusoto_logs = "0.48.0"

[dev-dependencies]
fake = "2.4.3"
reqwest = { version = "0.12", default-features = false, features = ["json","rustls-tls","cookies"]}

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote="1"
convert_case="0.6"
